@@ -134,6 +134,10 @@ public class Equipory extends Widget implements DTarget {
 	    }
 	    wmap.put(g, v);
 	}
+        //ideally we would want the abacus to update here
+        //however, the server only sends this tooltip information afterwards, 
+        //and it should be caught in the GItem uimsg function
+        
 	return(ret);
     }
     
@@ -149,6 +153,9 @@ public class Equipory extends Widget implements DTarget {
 		}
 	    }
 	}
+        
+        //notify the abacus: it should update
+        OverviewTool.instance(ui).notifyClothingChanged();
     }
     
     public boolean drop(Coord cc, Coord ul) {
