@@ -456,6 +456,8 @@ public class GameUI extends ConsoleHost implements Console.Directory {
 	TimerPanel.close();
 	DarknessWnd.close();
 	FlatnessTool.close();
+        OverviewTool.close();
+        LocatorTool.close();
 	WikiBrowser.close();
     }
 
